add: added feedback controller, schema, and routes
